--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -3,48 +3,51 @@
     <label for="suptitle" class="section__label">100% natural</label>
     <h2 class="section__title">products</h2>
     <div class="section__cards">
-      <div class="section__card">
-        <picture>
-          <source
-            srcset="./images/products/desktop/iceCream1x.webp 1x
+      <div class="section__card section__card--ice-cream">
+        <div class="card__img">
+          <picture>
+            <source
+              srcset="./images/products/desktop/iceCream1x.webp 1x
                             ./images/products/desktop/iceCream2x.webp 2x"
-            media="(min-width:1200px)"
-            type="image/webp"
-          />
-          <source
-            srcset="./images/products/desktop/iceCream1x.png 1x
+              media="(min-width:1200px)"
+              type="image/webp"
+            />
+            <source
+              srcset="./images/products/desktop/iceCream1x.png 1x
           ./images/products/desktop/iceCream2x.png 2x"
-            media="(min-width:1200px)"
-          />
-          <source
-            srcset="./images/products/tablet/iceCream1x.webp 1x
+              media="(min-width:1200px)"
+            />
+            <source
+              srcset="./images/products/tablet/iceCream1x.webp 1x
                             ./images/products/tablet/iceCream2x.webp 2x"
-            media="(min-width:768px)"
-            type="image/webp"
-          />
-          <source
-            srcset="./images/products/tablet/iceCream1x.png 1x
+              media="(min-width:768px)"
+              type="image/webp"
+            />
+            <source
+              srcset="./images/products/tablet/iceCream1x.png 1x
                             ./images/products/tablet/iceCream2x.png 2x"
-            media="(min-width:768px)"
-          />
-          <source
-            srcset="./images/products/mobile/iceCream1x.webp 1x
+              media="(min-width:768px)"
+            />
+            <source
+              srcset="./images/products/mobile/iceCream1x.webp 1x
                             ./images/products/mobile/iceCream2x.webp 2x"
-            media="(max-width:767px)"
-            type="image/webp"
-          />
-          <source
-            srcset="./images/products/mobile/iceCream1x.png 1x
+              media="(max-width:767px)"
+              type="image/webp"
+            />
+            <source
+              srcset="./images/products/mobile/iceCream1x.png 1x
                             ./images/products/mobile/iceCream2x.png 2x"
-            media="(max-width:767px)"
-          />
-          <img
-            src="./images/products/mobile/iceCream1x.png"
-            alt=""
-            width=""
-            height=""
-          />
-        </picture>
+              media="(max-width:767px)"
+            />
+            <img
+              class="card-img"
+              src="./images/products/mobile/iceCream1x.png"
+              alt="ice cream"
+              width="200px"
+              height="200px"
+            />
+          </picture>
+        </div>
         <h3 class="card__title">ice cream</h3>
         <p class="card__text">
           Soft ice cream with a delicate taste. Made with milk, cream, sugar and
@@ -64,48 +67,51 @@
           </svg>
         </button>
       </div>
-      <div class="section__card">
-        <picture>
-          <source
-            srcset="./images/products/desktop/iceCoffee1x.webp 1x
+      <div class="section__card section__card--ice-coffee">
+        <div class="card__img">
+          <picture>
+            <source
+              srcset="./images/products/desktop/iceCoffee1x.webp 1x
                             ./images/products/desktop/iceCoffee2x.webp 2x"
-            media="(min-width:1200px)"
-            type="image/webp"
-          />
-          <source
-            srcset="./images/products/desktop/iceCoffee1x.png 1x
+              media="(min-width:1200px)"
+              type="image/webp"
+            />
+            <source
+              srcset="./images/products/desktop/iceCoffee1x.png 1x
           ./images/products/desktop/iceCoffee2x.png 2x"
-            media="(min-width:1200px)"
-          />
-          <source
-            srcset="./images/products/tablet/iceCoffee1x.webp 1x
+              media="(min-width:1200px)"
+            />
+            <source
+              srcset="./images/products/tablet/iceCoffee1x.webp 1x
                             ./images/products/tablet/iceCoffee2x.webp 2x"
-            media="(min-width:768px)"
-            type="image/webp"
-          />
-          <source
-            srcset="./images/products/tablet/iceCoffee1x.png 1x
+              media="(min-width:768px)"
+              type="image/webp"
+            />
+            <source
+              srcset="./images/products/tablet/iceCoffee1x.png 1x
                             ./images/products/tablet/iceCoffee2x.png 2x"
-            media="(min-width:768px)"
-          />
-          <source
-            srcset="./images/products/mobile/iceCoffee1x.webp 1x
+              media="(min-width:768px)"
+            />
+            <source
+              srcset="./images/products/mobile/iceCoffee1x.webp 1x
                             ./images/products/mobile/iceCoffee2x.webp 2x"
-            media="(max-width:767px)"
-            type="image/webp"
-          />
-          <source
-            srcset="./images/products/mobile/iceCoffee1x.png 1x
+              media="(max-width:767px)"
+              type="image/webp"
+            />
+            <source
+              srcset="./images/products/mobile/iceCoffee1x.png 1x
                             ./images/products/mobile/iceCoffee2x.png 2x"
-            media="(max-width:767px)"
-          />
-          <img
-            src="./images/products/mobile/iceCoffee1x.png"
-            alt=""
-            width=""
-            height=""
-          />
-        </picture>
+              media="(max-width:767px)"
+            />
+            <img
+              class="card-img"
+              src="./images/products/mobile/iceCoffee1x.png"
+              alt="ice coffee"
+              width="200px"
+              height="200px"
+            />
+          </picture>
+        </div>
         <h3 class="card__title">ice coffee</h3>
         <p class="card__text">
           Fragrant invigorating drink created from 100% natural ingredients
@@ -125,48 +131,51 @@
           </svg>
         </button>
       </div>
-      <div class="section__card">
-        <picture>
-          <source
-            srcset="./images/products/desktop/milkSnake1x.webp 1x
+      <div class="section__card section__card--milkshakes">
+        <div class="card__img">
+          <picture>
+            <source
+              srcset="./images/products/desktop/milkSnake1x.webp 1x
                             ./images/products/desktop/milkSnake2x.webp 2x"
-            media="(min-width:1200px)"
-            type="image/webp"
-          />
-          <source
-            srcset="./images/products/desktop/milkSnake1x.png 1x
+              media="(min-width:1200px)"
+              type="image/webp"
+            />
+            <source
+              srcset="./images/products/desktop/milkSnake1x.png 1x
           ./images/products/desktop/milkSnake2x.png 2x"
-            media="(min-width:1200px)"
-          />
-          <source
-            srcset="./images/products/tablet/milkSnake1x.webp 1x
+              media="(min-width:1200px)"
+            />
+            <source
+              srcset="./images/products/tablet/milkSnake1x.webp 1x
                             ./images/products/tablet/milkSnake2x.webp 2x"
-            media="(min-width:768px)"
-            type="image/webp"
-          />
-          <source
-            srcset="./images/products/tablet/milkSnake1x.png 1x
+              media="(min-width:768px)"
+              type="image/webp"
+            />
+            <source
+              srcset="./images/products/tablet/milkSnake1x.png 1x
                             ./images/products/tablet/milkSnake2x.png 2x"
-            media="(min-width:768px)"
-          />
-          <source
-            srcset="./images/products/mobile/milkSnakes1x.webp 1x
+              media="(min-width:768px)"
+            />
+            <source
+              srcset="./images/products/mobile/milkSnakes1x.webp 1x
                             ./images/products/mobile/milkSnake2x.webp 2x"
-            media="(max-width:767px)"
-            type="image/webp"
-          />
-          <source
-            srcset="./images/products/mobile/milkSnakes1x.png 1x
+              media="(max-width:767px)"
+              type="image/webp"
+            />
+            <source
+              srcset="./images/products/mobile/milkSnakes1x.png 1x
                             ./images/products/mobile/milkSnakes2x.png 2x"
-            media="(max-width:767px)"
-          />
-          <img
-            src="./images/products/mobile/milkSnakes1x.png"
-            alt=""
-            width=""
-            height=""
-          />
-        </picture>
+              media="(max-width:767px)"
+            />
+            <img
+              class="card-img"
+              src="./images/products/mobile/milkSnakes1x.png"
+              alt="milkshakes"
+              width="200px"
+              height="200px"
+            />
+          </picture>
+        </div>
         <h3 class="card__title">milkshakes</h3>
         <p class="card__text">
           Sweet drinks based on milk and ice cream, supplemented with syrups,
