--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,10 +2,16 @@
   <h2 class="visually-hidden">Contacts</h2>
   <ul class="contacts__list list">
     <li class="contacts__item">
-      <div class="contacts__adress">
+      <div class="contacts__address">
         <p>CAFE</p>
         <p>Chicago</p>
-        <p>10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</p>
+        <a
+          href="https://goo.gl/maps/sjEodvwdSsUaJvu3A"
+          target="_blank"
+          rel="noreferrer noopener"
+          class="link"
+          >10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a
+        >
       </div>
       <div class="contacts__schedule">
         <p>Monday - Friday</p>
@@ -23,10 +29,16 @@
       </div>
     </li>
     <li class="contacts__item">
-      <div class="contacts__adress">
+      <div class="contacts__address">
         <p>FOOD TRUCK</p>
         <p>Los Angeles</p>
-        <p>1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</p>
+        <a
+          href="https://goo.gl/maps/amzM1JsRXsQ4LwFv8"
+          target="_blank"
+          rel="noreferrer noopener"
+          class="link"
+          >1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a
+        >
       </div>
       <div class="contacts__schedule">
         <p>Monday - Friday</p>
@@ -44,10 +56,16 @@
       </div>
     </li>
     <li class="contacts__item">
-      <div class="contacts__adress">
+      <div class="contacts__address">
         <p>CAFE</p>
         <p>New York</p>
-        <p>726 Sterling Pl, Brooklyn, NY 11222, USA</p>
+        <a
+          href="https://goo.gl/maps/PkwjDsXvcw1UYDM16"
+          target="_blank"
+          rel="noreferrer noopener"
+          class="link"
+          >726 Sterling Pl, Brooklyn, NY 11222, USA</a
+        >
       </div>
       <div class="contacts__schedule">
         <p>Monday - Friday</p>
@@ -68,13 +86,13 @@
   <button type="button">
     Our Locations
     <svg class="contacts__svg" width="12" height="12">
-      <!-- <use href="../images/symbol-defs.svg#icon-more"></use> -->
+      <use href="./images/symbol-defs.svg#icon-more"></use>
     </svg>
   </button>
   <button type="button">
     Franchise
     <svg class="contacts__svg" width="12" height="12">
-      <!-- <use href="../images/symbol-defs.svg#icon-more"></use> -->
+      <use href="./images/symbol-defs.svg#icon-more"></use>
     </svg>
   </button>
 </div>
