add logo and button-menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,8 @@
 <section class="header">
   <div class="container">
-    <logo class="logo"> </logo>
+    <logo class="logo">
+      <img src="./images/header/logo.png" alt="Зображення морозива" />
+    </logo>
     <nav class="nav">
       <ul class="list">
         <li class="item">Home</li>
@@ -9,6 +11,9 @@
         <li class="item">Contact</li>
       </ul>
     </nav>
-    <button type="button" class="#"></button>
+    <svg class="menu-open" width="32" height="32">
+      <use href="./images/header/icon.svg#icon-menu-open"></use>
+    </svg>
+    <button type="button" class="#">Buy now</button>
   </div>
 </section>
