add button for menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,9 +11,11 @@
         <li class="item">Contact</li>
       </ul>
     </nav>
-    <svg class="menu-open" width="32" height="32">
-      <use href="./images/header/icon.svg#icon-menu-open"></use>
-    </svg>
+    <button type="button" class="#">
+      <svg class="menu-open" width="32" height="32">
+        <use href="./images/header/icon.svg#icon-menu-open"></use>
+      </svg>
+    </button>
     <button type="button" class="#">Buy now</button>
   </div>
 </section>
