--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -2,8 +2,8 @@
   <div class="container">
     <label for="suptitle" class="section__label">100% natural</label>
     <h2 class="section__title">products</h2>
-    <div class="section__cards">
-      <div class="section__card section__card--ice-cream">
+    <ul class="section__cards">
+      <li class="section__card section__card--ice-cream">
         <picture>
           <source
             srcset="./images/products/desktop/iceCream1x.webp 1x
@@ -65,8 +65,8 @@
             />
           </svg>
         </button>
-      </div>
-      <div class="section__card section__card--ice-coffee">
+      </li>
+      <li class="section__card section__card--ice-coffee">
         <picture>
           <source
             srcset="./images/products/desktop/iceCoffee1x.webp 1x
@@ -129,8 +129,8 @@
             />
           </svg>
         </button>
-      </div>
-      <div class="section__card section__card--milkshakes">
+      </li>
+      <li class="section__card section__card--milkshakes">
         <picture>
           <source
             srcset="./images/products/desktop/milkSnake1x.webp 1x
@@ -193,7 +193,7 @@
             />
           </svg>
         </button>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </section>
