--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,20 +1,25 @@
 <section class="hero container">
-  <h1 class="hero__title">ice cream made with <span>passion</span></h1>
-  <div class="hero__flex">
-    <ul class="hero__list list">
-      <li class="hero__item">
-        <a class="hero__link link" href="">Products</a>
-      </li>
-      <li class="hero__item">
-        <a class="hero__link link" href="">How it’s made?</a>
-      </li>
-    </ul>
-  </div>
-  <img
-    class="hero__ice"
-    src="./images/hero/ice-cream-mobile-1x.png"
-    alt="ice-cream"
-    width="157"
-    height="207"
-  />
+  <h1 class="hero__title">
+    ice cream made with <span class="pos">passion</span>
+  </h1>
+  <ul class="hero__list list">
+    <li class="hero__item">
+      <a class="hero__btn link" href="">Products</a>
+    </li>
+    <li class="hero__item">
+      <a class="hero__link link" href="">How it’s made?</a>
+    </li>
+  </ul>
+  <ul class="ice__list list">
+    <li class="list__ice">
+      <img src="./images/hero/ice-cream-mobile-1x.png" alt="" />
+    </li>
+    <li class="list__face"><img src="./images/hero/ice-face.png" alt="" /></li>
+    <li class="list__face">
+      <img src="./images/hero/ice-face-2.png" alt="" />
+    </li>
+    <li class="list__face">
+      <img src="./images/hero/ice-face-3.png" alt="" />
+    </li>
+  </ul>
 </section>
